; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_hotkey_show_sceneitem.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_hotkey_show_sceneitem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*, i32)* @hotkey_show_sceneitem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hotkey_show_sceneitem(i8* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %7, align 8
  %12 = call i32 @UNUSED_PARAMETER(i32* %11)
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @UNUSED_PARAMETER(i32* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = call %struct.TYPE_5__* @sceneitem_get_ref(i8* %15)
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %10, align 8
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %32

19:                                               ; preds = %4
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %21 = icmp ne %struct.TYPE_5__* %20, null
  br i1 %21, label %22, label %32

22:                                               ; preds = %19
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %32, label %27

27:                                               ; preds = %22
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %29 = call i32 @obs_sceneitem_set_visible(%struct.TYPE_5__* %28, i32 1)
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %31 = call i32 @obs_sceneitem_release(%struct.TYPE_5__* %30)
  store i32 1, i32* %5, align 4
  br label %35

32:                                               ; preds = %22, %19, %4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %34 = call i32 @obs_sceneitem_release(%struct.TYPE_5__* %33)
  store i32 0, i32* %5, align 4
  br label %35

35:                                               ; preds = %32, %27
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local %struct.TYPE_5__* @sceneitem_get_ref(i8*) #1

declare dso_local i32 @obs_sceneitem_set_visible(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @obs_sceneitem_release(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
